@@ -2,8 +2,11 @@ package com.auction.auctionspringboot.constant;
 
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
+
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
+import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
@@ -21,39 +24,42 @@ import static com.auction.auctionspringboot.constant.Permission.MANAGER_UPDATE;
 @RequiredArgsConstructor
 public enum RoleType {
 
-  USER(Collections.emptySet()),
-  ADMIN(
-          Set.of(
-                  ADMIN_READ,
-                  ADMIN_UPDATE,
-                  ADMIN_DELETE,
-                  ADMIN_CREATE,
-                  MANAGER_READ,
-                  MANAGER_UPDATE,
-                  MANAGER_DELETE,
-                  MANAGER_CREATE
-          )
-  ),
-  MANAGER(
-          Set.of(
-                  MANAGER_READ,
-                  MANAGER_UPDATE,
-                  MANAGER_DELETE,
-                  MANAGER_CREATE
-          )
-  )
+        USER(Collections.emptySet()),
+        ADMIN(
+                        Set.of(
+                                        ADMIN_READ,
+                                        ADMIN_UPDATE,
+                                        ADMIN_DELETE,
+                                        ADMIN_CREATE,
+                                        MANAGER_READ,
+                                        MANAGER_UPDATE,
+                                        MANAGER_DELETE,
+                                        MANAGER_CREATE)),
+        MANAGER(
+                        Set.of(
+                                        MANAGER_READ,
+                                        MANAGER_UPDATE,
+                                        MANAGER_DELETE,
+                                        MANAGER_CREATE));
 
-  ;
+        public static RoleType mapToRoleType(String role) {
+                // Ánh xạ giá trị từ Enum Role sang Enum RoleType
+                if (role == "admin") {
+                        return RoleType.ADMIN;
+                } else {
+                        return RoleType.USER;
+                }
+        }
 
-  @Getter
-  private final Set<Permission> permissions;
+        @Getter
+        private final Set<Permission> permissions;
 
-  public List<SimpleGrantedAuthority> getAuthorities() {
-    var authorities = getPermissions()
-            .stream()
-            .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
-            .collect(Collectors.toList());
-    authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
-    return authorities;
-  }
+        public List<SimpleGrantedAuthority> getAuthorities() {
+                var authorities = getPermissions()
+                                .stream()
+                                .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
+                                .collect(Collectors.toList());
+                authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
+                return authorities;
+        }
 }
